--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 theme = "poison"
 paginate = 10
 pluralizelisttitles = false
-title = 'LM'
+title = 'Lennard Maeke Blog'
 
 [params]
     brand = "Lennard Maeke"                    # name of your site - appears in the sidebar
